--- a/client/src/components/artists-search/index.scss
+++ b/client/src/components/artists-search/index.scss
@@ -1,11 +1,11 @@
 .cards {
   align-content: left;
-  margin-top: 5%;
+  margin-top: 2em;
   width: auto;
   display: grid;
-  grid-template-columns: repeat(4, 10% [col-start]);
+  grid-template-columns: repeat(4, 12% [col-start]);
   justify-content: center;
-  gap: 5em;
+  gap: 3em;
   list-style-type: none;
 }
 
@@ -143,4 +143,34 @@
   100% {
     height: 48px;
   }
+}
+
+.card-image {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0;
+  margin-bottom: 0;
+  width: 300px; 
+  height: 300px;
+  object-fit: cover;
+}
+
+.artist-card {
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 1em;
+  text-align: center;
+  max-width: 450px;
+  background-color: rgb(255, 255, 255);
+  color: rgb(20, 20, 20);
+  border: 1px solid black;
+  border-radius: 12px;
+}
+
+.card-similar-artist {
+  margin-top: 2em;
+  text-align: center;
 }
