--- a/client/src/components/artists-search/index.scss
+++ b/client/src/components/artists-search/index.scss
@@ -12,6 +12,10 @@
   list-style-type: none;
 }
 
+.cards :hover {
+  background-color: rgb(0, 0, 0);
+}
+
 .alert {
   text-align: center;
   color: red;
